--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@ CSS to make sure hidden means hidden:</p>
 <code>&lt;button&gt;</code> and will &amp;emdash; since we didn't specify one &amp;emdash; generate an
 ID for the <code>&lt;nav&gt;</code>. The result:</p>
 
-<p>See the Pen <a href="http://codepen.io/nadavspi/pen/wWYvXW/">wWYvXW</a> by Nadav Spiegelman (<a href="http://codepen.io/nadavspi">@nadavspi</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-
-
+<p data-height="265" data-theme-id="0" data-slug-hash="wWYvXW" data-default-tab="html,result" data-user="nadavspi" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/nadavspi/pen/wWYvXW/">wWYvXW</a> by Nadav Spiegelman (<a href="http://codepen.io/nadavspi">@nadavspi</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 <h3>
 <a id="toggling-some-other-element" class="anchor" href="#toggling-some-other-element" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Toggling some other element</h3>
