update mdash to proper html symbol

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ CSS to make sure hidden means hidden:</p>
 }</pre></div>
 
 <p>Peekaboo will add the <code>aria-expanded</code> and <code>aria-controls</code> attributes to the
-<code>&lt;button&gt;</code> and will &amp;emdash; since we didn't specify one &amp;emdash; generate an
+<code>&lt;button&gt;</code> and will &mdash; since we didn't specify one &mdash; generate an
 ID for the <code>&lt;nav&gt;</code>. The result:</p>
 
 <p data-height="265" data-theme-id="0" data-slug-hash="wWYvXW" data-default-tab="html,result" data-user="nadavspi" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/nadavspi/pen/wWYvXW/">Peekaboo: Simple Example</a> by Nadav Spiegelman (<a href="http://codepen.io/nadavspi">@nadavspi</a>) on <a href="http://codepen.io">CodePen</a>.</p>
